added icons for project wizard and *.cl files, improved descriptions.

--- a/jocl-project/src/com/mbien/opencl/project/Bundle.properties
+++ b/jocl-project/src/com/mbien/opencl/project/Bundle.properties
@@ -1,6 +1,6 @@
 LBL_CreateProjectStep=Name and Location
 OpenIDE-Module-Name=jocl-project
-Templates/Project/Standard/JavaOpenCLProject.zip=Java OpenCL Project
+Templates/Project/Standard/JavaOpenCLProject.zip=Java OpenCL Application
 JavaOpenCLPanelVisual.projectNameLabel.text=Project &Name:
 JavaOpenCLPanelVisual.projectLocationLabel.text=Project &Location:
 JavaOpenCLPanelVisual.browseButton.actionCommand=BROWSE
