added reserved tokens, relaxed C syntax to allow iterator declaration in for-loop, moved types to BUILDIN_TYPE terminal symbol.

--- a/opencl-editor/build.xml
+++ b/opencl-editor/build.xml
@@ -5,21 +5,25 @@
 <project name="com.mbien.opencl.editor" default="netbeans" basedir=".">
     <description>Builds, tests, and runs the project com.mbien.opencl.editor.</description>
     <import file="nbproject/build-impl.xml"/>
+
+    <taskdef name="antlr" classname="org.apache.tools.ant.antlr.ANTLR3" classpath="${basedir}/lib/antlr3-ant.jar"/>
     
     <target name="-pre-compile">
-        
-        <property name="grammar.folder" value="${src.dir}/com/mbien/opencl/antlr"/>
 
-        <taskdef name="antlr" classname="org.apache.tools.ant.antlr.ANTLR3" classpath="${basedir}/lib/antlr3-ant.jar"/>
+        <property name="grammar.folder" value="${src.dir}/com/mbien/opencl/antlr"/>
+        <delete file="${grammar.folder}/CL.tokens"/>
+        <delete file="${grammar.folder}/CLLexer.java"/>
+        <delete file="${grammar.folder}/CLParser.java"/>
 
         <antlr target="${grammar.folder}/CL.g" outputdirectory="${grammar.folder}" libdirectory="${grammar.folder}"
-            multithreaded="true">
+            multithreaded="false">
                 <classpath>
                     <pathelement path="${basedir}/lib/antlr-3.4-complete-no-antlrv2.jar"/>
                 </classpath>
         </antlr>
+        
     </target>
 
-    <target name="compile" depends="-pre-compile"/>
+    <target name="compile" depends="-pre-compile,projectized-common.compile"/>
     
 </project>
