added missing access_qualifiers, added OpenCL attribute syntax, cleanup.

--- a/opencl-editor/src/com/mbien/opencl/editor/Bundle.properties
+++ b/opencl-editor/src/com/mbien/opencl/editor/Bundle.properties
@@ -6,6 +6,7 @@ OpenIDE-Module-Long-Description=\
 
 Services/MIMEResolver/CLResolver.xml=OpenCL Files
 Templates/OpenCL/CLTemplate.cl=OpenCL File
+Editors/text/x-opencl=OpenCL Files
 
 character=Character
 keyword=Keyword
