--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,8 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
     ${project.com.mbien.opencl.project}:\
-    ${project.com.mbien.opencl.editor}
+    ${project.com.mbien.opencl.editor}:\
+    ${project.com.jogamp.opencl}
+project.com.jogamp.opencl=jocl-runtime
 project.com.mbien.opencl.editor=opencl-editor
 project.com.mbien.opencl.project=jocl-project
