--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -15,4 +15,5 @@ cluster.path=\
     ${nbplatform.active.dir}/harness:\
     ${nbplatform.active.dir}/cnd:\
     ${nbplatform.active.dir}/php
+nbjdk.active=JDK_1.7
 nbplatform.active=default
