--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+app.title=opencl-pack
 auxiliary.org-netbeans-modules-apisupport-installer.license-type=no
 auxiliary.org-netbeans-modules-apisupport-installer.os-linux=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
@@ -5,9 +6,9 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
-    ${project.com.mbien.opencl.project}:\
+    ${project.com.jogamp.opencl}:\
     ${project.com.mbien.opencl.editor}:\
-    ${project.com.jogamp.opencl}
+    ${project.com.mbien.opencl.project}
 project.com.jogamp.opencl=jocl-runtime
 project.com.mbien.opencl.editor=opencl-editor
 project.com.mbien.opencl.project=jocl-project
