--- a/jocl-project/nbproject/project.properties
+++ b/jocl-project/nbproject/project.properties
@@ -1,3 +1,4 @@
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../GPL-2.0+ClasspathException.txt
 nbm.module.author=Michael Bien
