--- a/jocl-project/src/com/mbien/opencl/project/Bundle.properties
+++ b/jocl-project/src/com/mbien/opencl/project/Bundle.properties
@@ -1,5 +1,7 @@
 LBL_CreateProjectStep=Name and Location
+OpenIDE-Module-Display-Category=OpenCL
 OpenIDE-Module-Name=jocl-project
+OpenIDE-Module-Short-Description=Java OpenCL project templates
 Templates/Project/Standard/JavaOpenCLProject.zip=Java OpenCL Application
 JavaOpenCLPanelVisual.projectNameLabel.text=Project &Name:
 JavaOpenCLPanelVisual.projectLocationLabel.text=Project &Location:
