--- a/opencl-editor/nbproject/project.properties
+++ b/opencl-editor/nbproject/project.properties
@@ -1,3 +1,4 @@
 javac.compilerargs=-Xlint -Xlint:-serial
 javac.source=1.7
+license.file=../GPL-2.0+ClasspathException.txt
 nbm.module.author=Michael Bien
