added opencl-util module.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,7 +8,9 @@ auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
     ${project.com.jogamp.opencl}:\
     ${project.com.mbien.opencl.editor}:\
-    ${project.com.mbien.opencl.project}
+    ${project.com.mbien.opencl.project}:\
+    ${project.com.mbien.opencl.util}
 project.com.jogamp.opencl=jocl-runtime
 project.com.mbien.opencl.editor=opencl-editor
 project.com.mbien.opencl.project=jocl-project
+project.com.mbien.opencl.util=opencl-util
