--- a/opencl-editor/src/com/mbien/opencl/editor/Bundle.properties
+++ b/opencl-editor/src/com/mbien/opencl/editor/Bundle.properties
@@ -2,7 +2,7 @@ OpenIDE-Module-Name=opencl-editor
 OpenIDE-Module-Display-Category=OpenCL
 OpenIDE-Module-Short-Description=OpenCL editor
 OpenIDE-Module-Long-Description=\
-    Editor for OpenCL files.
+    OpenCL editor providing features like auto completion or in-editor compiler integration for *.cl files.
 
 Services/MIMEResolver/CLResolver.xml=OpenCL Files
 Templates/OpenCL/CLTemplate.cl=OpenCL File
