--- a/opencl-util/src/com/mbien/opencl/util/Bundle.properties
+++ b/opencl-util/src/com/mbien/opencl/util/Bundle.properties
@@ -1,6 +1,6 @@
 OpenIDE-Module-Display-Category=OpenCL
 OpenIDE-Module-Long-Description=\
-    Provides tools to retrieve OpenCL information.
+    Provides utilities to retrieve OpenCL information which might be useful for development.
 OpenIDE-Module-Name=opencl-util
 OpenIDE-Module-Short-Description=OpenCL utilities
 
